docs/pages/versions/v55.0.0/sdk/ui/swift-ui/host.mdx
---
title: 宿主
description: 一个 SwiftUI 宿主组件，可在 React Native 中启用 SwiftUI 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

一个组件，允许你在 React Native 中放入其他 `@expo/ui/swift-ui` 组件。它的作用类似于 DOM 中的 [`<svg>`](https://developer.mozilla.org/en-US/docs/Web/SVG/Reference/Element/svg)，类似于 [`react-native-skia`](https://shopify.github.io/react-native-skia/) 中的 [`<Canvas>`](https://shopify.github.io/react-native-skia/docs/canvas/overview/)，其底层使用 [`UIHostingController`](https://developer.apple.com/documentation/swiftui/uihostingcontroller) 在 UIKit 中渲染 SwiftUI 视图。

由于 `Host` 组件是一个 React Native [`View`](https://reactnative.dev/docs/view)，你可以向它传递 [`style`](https://reactnative.dev/docs/style) 属性，或者使用 `matchContents` 属性，让 `Host` 组件的尺寸与内容大小一致。

## 安装

<APIInstallSection />

## 使用

### 匹配内容大小

使用 `matchContents` 让 `Host` 自动调整自身大小以适配其 SwiftUI 内容，而不是要求显式指定尺寸。

> **注意：** `matchContents` 仅适用于具有内在尺寸或显式 [`frame`](modifiers/#frameparams) 的组件（例如 `Button`、`Toggle`、`Text`）。像 `Slider` 和线性 `ProgressView` 这类可伸缩宽度的组件会扩展以填充可用空间，并且没有内在宽度，对它们使用 `matchContents` 会导致宽度接近零。对于这些组件，请么在组件上应用 [`frame`](modifiers/#frameparams) 修饰符以显式指定宽度，要么改为在 `Host` 上使用 `style` 进行显式尺寸设置（例如 `style={{ flex: 1 }}` 或 `style={{ width: 300 }}`）。

```tsx MatchContentsExample.tsx
import { Button, Host } from '@expo/ui/swift-ui';

export default function MatchContentsExample() {
  return (
    <Host matchContents>
      <Button
        onPress={() => {
          console.log('已按下');
        }}>
        点击
      </Button>
    </Host>
  );
}
```

### 使用 style 显式设置尺寸

使用 `style` 为 `Host` 设置显式尺寸，例如通过 `flex: 1` 填充可用空间。

```tsx ExplicitSizingExample.tsx
import { Button, Host, VStack, Text } from '@expo/ui/swift-ui';

export default function ExplicitSizingExample() {
  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={8}>
        <Text>你好，世界！</Text>
        <Button
          onPress={() => {
            console.log('已按下');
          }}>
          点击
        </Button>
      </VStack>
    </Host>
  );
}
```

### 忽略键盘安全区域

当 React Native 已经在处理键盘避让时（例如使用 `react-native-keyboard-controller`），使用 `ignoreSafeArea="keyboard"` 来防止 SwiftUI 容器应用自己的键盘内边距。

```tsx IgnoreKeyboardExample.tsx
import { Host, TextField } from '@expo/ui/swift-ui';
import { KeyboardProvider, KeyboardStickyView } from 'react-native-keyboard-controller';
import { View } from 'react-native';

export default function IgnoreKeyboardExample() {
  return (
    <KeyboardProvider>
      <View style={{ flex: 1, backgroundColor: 'black' }}>
        <KeyboardStickyView
          style={{
            position: 'absolute',
            bottom: 0,
            left: 0,
            right: 0,
            padding: 16,
            backgroundColor: 'green',
          }}>
          <Host matchContents ignoreSafeArea="keyboard" style={{ backgroundColor: 'red' }}>
            <TextField placeholder="输入文本" multiline />
          </Host>
        </KeyboardStickyView>
      </View>
    </KeyboardProvider>
  );
}
```

### 忽略所有安全区域

当你希望 SwiftUI 内容延伸到状态栏后方时，使用 `ignoreSafeArea="all"`，这对于全屏覆盖层或背景很有用。

```tsx IgnoreAllSafeAreasExample.tsx
import { Host, Text, VStack } from '@expo/ui/swift-ui';

export default function IgnoreAllSafeAreasExample() {
  return (
    <Host
      ignoreSafeArea="all"
      style={{ position: 'absolute', top: 0, left: 0, right: 0, bottom: 0 }}>
      <VStack>
        <Text>此内容会延伸到状态栏和 Home 指示器后方。</Text>
      </VStack>
    </Host>
  );
}
```

## API

```tsx
import { Host } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/host" apiName="Host" />
