docs/pages/versions/v56.0.0/sdk/ui/swift-ui/host.mdx
---
title: 宿主
description: 一个 SwiftUI Host 组件，用于在 React Native 中启用 SwiftUI 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

> **info** 如需跨平台使用，请参阅通用的 [`Host`](../universal/host) ——它会根据平台渲染相应的原生组件。

一个组件，允许你在 React Native 中放置其他 `@expo/ui/swift-ui` 组件。它的作用类似于 DOM 中的 [`<svg>`](https://developer.mozilla.org/en-US/docs/Web/SVG/Reference/Element/svg)、[`react-native-skia`](https://shopify.github.io/react-native-skia/) 中的 [`<Canvas>`](https://shopify.github.io/react-native-skia/docs/canvas/overview/)，其内部使用 [`UIHostingController`](https://developer.apple.com/documentation/swiftui/uihostingcontroller) 在 UIKit 中渲染 SwiftUI 视图。

由于 `Host` 组件是一个 React Native [`View`](https://reactnative.dev/docs/view)，你可以向它传入 [`style`](https://reactnative.dev/docs/style) 属性，或者传入 `matchContents` 属性，使 `Host` 组件的尺寸与内容大小一致。

## 安装

<APIInstallSection />

## 使用

### 匹配内容尺寸

使用 `matchContents` 让 `Host` 自动调整自身大小以适配其 SwiftUI 内容，而不是要求显式指定尺寸。

> **注意：** `matchContents` 仅适用于具有固有尺寸或显式 [`frame`](modifiers/#frameparams) 的组件（例如 `Button`、`Toggle`、`Text`）。像 `Slider` 和线性 `ProgressView` 这类可伸缩宽度组件会扩展以填满可用空间，并且没有固有宽度，对它们使用 `matchContents` 会导致宽度接近于零。对于这些组件，要么在组件上应用 [`frame`](modifiers/#frameparams) 修饰符以给它一个显式宽度，要么改为在 `Host` 上使用 `style` 进行显式尺寸设置（例如 `style={{ flex: 1 }}` 或 `style={{ width: 300 }}`）。

```tsx MatchContentsExample.tsx
import { Button, Host } from '@expo/ui/swift-ui';

export default function MatchContentsExample() {
  return (
    <Host matchContents>
      <Button
        onPress={() => {
          console.log('已按下');
        }}>
        点击
      </Button>
    </Host>
  );
}
```

> **注意：** 不要在与滚动容器（`ScrollView`、`List`、`Form`、`LazyHStack`、`LazyVStack`）相同的轴上使用 `matchContents`。`matchContents` 会映射为 SwiftUI 的 `.fixedSize`，这会使滚动容器按其内容大小布局。它还会导致视口之外没有可滚动的内容，因此滚动会悄无声息地停止工作。请使用 `matchContents={{ vertical: true }}` 并配合 `style={{ width: '100%' }}`（或在滚动轴上任意有限宽度）。

```tsx ScrollViewMatchContents.tsx
import { Host, HStack, ScrollView, Text } from '@expo/ui/swift-ui';

export default function ScrollViewMatchContents() {
  return (
    <Host matchContents={{ vertical: true }} style={{ width: '100%' }}>
      <ScrollView axes="horizontal">
        <HStack spacing={12}>
          {Array.from({ length: 20 }).map((_, i) => (
            <Text key={i}>项目 {i}</Text>
          ))}
        </HStack>
      </ScrollView>
    </Host>
  );
}
```

### 使用 style 显式设置尺寸

使用 `style` 为 `Host` 设置显式尺寸，例如使用 `flex: 1` 填充可用空间。

```tsx ExplicitSizingExample.tsx
import { Button, Host, VStack, Text } from '@expo/ui/swift-ui';

export default function ExplicitSizingExample() {
  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={8}>
        <Text>你好，世界！</Text>
        <Button
          onPress={() => {
            console.log('已按下');
          }}>
          点击
        </Button>
      </VStack>
    </Host>
  );
}
```

### 忽略键盘安全区域

当 React Native 已经在处理键盘避让时（例如使用 `react-native-keyboard-controller`），请使用 `ignoreSafeArea="keyboard"`，以防止 SwiftUI 宿主应用自己的键盘内边距。

```tsx IgnoreKeyboardExample.tsx
import { Host, TextField } from '@expo/ui/swift-ui';
import { KeyboardProvider, KeyboardStickyView } from 'react-native-keyboard-controller';
import { View } from 'react-native';

export default function IgnoreKeyboardExample() {
  return (
    <KeyboardProvider>
      <View style={{ flex: 1, backgroundColor: 'black' }}>
        <KeyboardStickyView
          style={{
            position: 'absolute',
            bottom: 0,
            left: 0,
            right: 0,
            padding: 16,
            backgroundColor: 'green',
          }}>
          <Host matchContents ignoreSafeArea="keyboard" style={{ backgroundColor: 'red' }}>
            <TextField placeholder="输入文本" axis="vertical" />
          </Host>
        </KeyboardStickyView>
      </View>
    </KeyboardProvider>
  );
}
```

### 忽略容器安全区域

使用 `ignoreSafeArea="container"` 仅移除容器安全区域（刘海、主屏幕指示条、状态栏和导航栏）。键盘安全区域仍然适用。

```tsx IgnoreContainerSafeAreaExample.tsx
import { Button, Host, HStack, Spacer } from '@expo/ui/swift-ui';
import { labelStyle } from '@expo/ui/swift-ui/modifiers';
import { useSafeAreaInsets } from 'react-native-safe-area-context';

export default function IgnoreContainerSafeAreaExample() {
  const insets = useSafeAreaInsets();
  return (
    <Host
      style={{ width: '100%', paddingTop: insets.top }}
      matchContents={{ vertical: true }}
      ignoreSafeArea="container">
      <HStack>
        <Button systemImage="chevron.backward" label="返回" modifiers={[labelStyle('iconOnly')]} />
        <Spacer />
        <Button
          systemImage="square.and.arrow.up"
          label="分享"
          modifiers={[labelStyle('iconOnly')]}
        />
      </HStack>
    </Host>
  );
}
```

### 忽略所有安全区域

当你希望 SwiftUI 内容延伸到状态栏和键盘后方时，请使用 `ignoreSafeArea="all"`，这对于全屏覆盖层或背景非常有用。

```tsx IgnoreAllSafeAreasExample.tsx
import { Host, Text, VStack } from '@expo/ui/swift-ui';

export default function IgnoreAllSafeAreasExample() {
  return (
    <Host
      ignoreSafeArea="all"
      style={{ position: 'absolute', top: 0, left: 0, right: 0, bottom: 0 }}>
      <VStack>
        <Text>此内容会延伸到状态栏和主屏幕指示条后方。</Text>
      </VStack>
    </Host>
  );
}
```

## 接口

```tsx
import { Host } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/host" apiName="Host" />
